<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="gov.nasa.arc.irg.astrobee.guestscienceactivity.MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:src="@drawable/astrobee_spheres_logo_small"
        android:layout_above="@+id/RelativeLayout01"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"/>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnBind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bind">
        </Button>

        <Button
            android:id="@+id/btnUnbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_unbind" >
        </Button>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_commStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_commStatus"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/label_sentMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sentMessage"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <TextSwitcher
        android:id="@+id/text_sentMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_out_right">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/text_sentMessage"/>
    </TextSwitcher>

    <TextView
        android:id="@+id/label_receiveMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_receivedMessage"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>

    <TextSwitcher
        android:id="@+id/text_receiveMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_out_right">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/text_receivedMessage"/>
    </TextSwitcher>

</LinearLayout>
